--- a/Style/main.css
+++ b/Style/main.css
@@ -9,13 +9,13 @@ header img {
 	float: left;
 }
 
-h2{
+header h2{
 	font-size: 170%;
 	color: #800000;
 	text-indent: 30px;
 }
 
-h3{
+header h3{
 	font-size: 130%;
 	font-style: italic;
 	text-indent: 30px;
